// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`interested-party-comments GET /interested-party-comments with data should render interestedPartyComments page with awaiting review comments 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
            <h1             class="govuk-heading-l">Interested Party Comments</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <p class="govuk-body govuk-!-margin-bottom-6"><a href="/appeals-service/appeal-details/2/interested-party-comments/add"
                class="govuk-link">Add IP comment</a>
            </p>
            <div id="interested-party-comments-tabs" class="govuk-tabs pins-tabs"
            data-module="govuk-tabs">
                <h2 class="govuk-tabs__title"> Contents</h2>
                <ul class="govuk-tabs__list">
                    <li class="govuk-tabs__list-item govuk-tabs__list-item--selected"><a class="govuk-tabs__tab" href="#awaiting-review"> Awaiting review</a>
                    </li>
                    <li class="govuk-tabs__list-item"><a class="govuk-tabs__tab" href="#valid"> Valid</a>
                    </li>
                    <li class="govuk-tabs__list-item"><a class="govuk-tabs__tab" href="#invalid"> Invalid</a>
                    </li>
                </ul>
                <div class="govuk-tabs__panel" id="awaiting-review">
                    <table class="govuk-table">
                        <thead class="govuk-table__head">
                            <tr class="govuk-table__row">
                                <th scope="col" class="govuk-table__header">Interested party</th>
                                <th scope="col" class="govuk-table__header">Submitted</th>
                                <th scope="col" class="govuk-table__header">Action</th>
                            </tr>
                        </thead>
                        <tbody class="govuk-table__body">
                            <tr class="govuk-table__row">
                                <td class="govuk-table__cell">Eva Sharma</td>
                                <td class="govuk-table__cell">24 September 2024</td>
                                <td class="govuk-table__cell"><a href="./interested-party-comments/3812/review" class="govuk-link">Review<span class="govuk-visually-hidden"> interested party comments from Eva Sharma</span></a>
                                </td>
                            </tr>
                            <tr class="govuk-table__row">
                                <td class="govuk-table__cell">Roger Simmons</td>
                                <td class="govuk-table__cell">24 September 2024</td>
                                <td class="govuk-table__cell"><a href="./interested-party-comments/3811/review" class="govuk-link">Review<span class="govuk-visually-hidden"> interested party comments from Roger Simmons</span></a>
                                </td>
                            </tr>
                            <tr class="govuk-table__row">
                                <td class="govuk-table__cell">Roger Simmons</td>
                                <td class="govuk-table__cell">24 September 2024</td>
                                <td class="govuk-table__cell"><a href="./interested-party-comments/3810/review" class="govuk-link">Review<span class="govuk-visually-hidden"> interested party comments from Roger Simmons</span></a>
                                </td>
                            </tr>
                        </tbody>
                    </table>
                </div>
                <div class="govuk-tabs__panel govuk-tabs__panel--hidden" id="valid">
                    <table class="govuk-table">
                        <thead class="govuk-table__head">
                            <tr class="govuk-table__row">
                                <th scope="col" class="govuk-table__header">Interested party</th>
                                <th scope="col" class="govuk-table__header">Submitted</th>
                                <th scope="col" class="govuk-table__header">Action</th>
                            </tr>
                        </thead>
                        <tbody class="govuk-table__body">
                            <tr class="govuk-table__row">
                                <td class="govuk-table__cell">Roger Simmons</td>
                                <td class="govuk-table__cell">24 September 2024</td>
                                <td class="govuk-table__cell"><a href="./interested-party-comments/3852/view" class="govuk-link">View<span class="govuk-visually-hidden"> interested party comments from Roger Simmons</span></a>
                                </td>
                            </tr>
                            <tr class="govuk-table__row">
                                <td class="govuk-table__cell">Roger Simmons</td>
                                <td class="govuk-table__cell">24 September 2024</td>
                                <td class="govuk-table__cell"><a href="./interested-party-comments/3851/view" class="govuk-link">View<span class="govuk-visually-hidden"> interested party comments from Roger Simmons</span></a>
                                </td>
                            </tr>
                            <tr class="govuk-table__row">
                                <td class="govuk-table__cell">Haley Eland</td>
                                <td class="govuk-table__cell">24 September 2024</td>
                                <td class="govuk-table__cell"><a href="./interested-party-comments/3850/view" class="govuk-link">View<span class="govuk-visually-hidden"> interested party comments from Haley Eland</span></a>
                                </td>
                            </tr>
                        </tbody>
                    </table>
                </div>
                <div class="govuk-tabs__panel govuk-tabs__panel--hidden" id="invalid">
                    <table class="govuk-table">
                        <thead class="govuk-table__head">
                            <tr class="govuk-table__row">
                                <th scope="col" class="govuk-table__header">Interested party</th>
                                <th scope="col" class="govuk-table__header">Submitted</th>
                                <th scope="col" class="govuk-table__header">Action</th>
                            </tr>
                        </thead>
                        <tbody class="govuk-table__body">
                            <tr class="govuk-table__row">
                                <td class="govuk-table__cell">Ryan Marshall</td>
                                <td class="govuk-table__cell">24 September 2024</td>
                                <td class="govuk-table__cell"><a href="./interested-party-comments/3872/view" class="govuk-link">View<span class="govuk-visually-hidden"> interested party comments from Ryan Marshall</span></a>
                                </td>
                            </tr>
                            <tr class="govuk-table__row">
                                <td class="govuk-table__cell">Ryan Marshall</td>
                                <td class="govuk-table__cell">24 September 2024</td>
                                <td class="govuk-table__cell"><a href="./interested-party-comments/3871/view" class="govuk-link">View<span class="govuk-visually-hidden"> interested party comments from Ryan Marshall</span></a>
                                </td>
                            </tr>
                            <tr class="govuk-table__row">
                                <td class="govuk-table__cell">Eva Sharma</td>
                                <td class="govuk-table__cell">24 September 2024</td>
                                <td class="govuk-table__cell"><a href="./interested-party-comments/3870/view" class="govuk-link">View<span class="govuk-visually-hidden"> interested party comments from Eva Sharma</span></a>
                                </td>
                            </tr>
                        </tbody>
                    </table>
                </div>
            </div>
            <p class="govuk-body"><a href="#" class="govuk-link">Withdrawn IP comments</a>
            </p>
        </div>
    </div>
</main>"
`;

exports[`interested-party-comments GET /interested-party-comments with data should render interestedPartyComments page with invalid comments 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
            <h1             class="govuk-heading-l">Interested Party Comments</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <p class="govuk-body govuk-!-margin-bottom-6"><a href="/appeals-service/appeal-details/2/interested-party-comments/add"
                class="govuk-link">Add IP comment</a>
            </p>
            <div id="interested-party-comments-tabs" class="govuk-tabs pins-tabs"
            data-module="govuk-tabs">
                <h2 class="govuk-tabs__title"> Contents</h2>
                <ul class="govuk-tabs__list">
                    <li class="govuk-tabs__list-item govuk-tabs__list-item--selected"><a class="govuk-tabs__tab" href="#awaiting-review"> Awaiting review</a>
                    </li>
                    <li class="govuk-tabs__list-item"><a class="govuk-tabs__tab" href="#valid"> Valid</a>
                    </li>
                    <li class="govuk-tabs__list-item"><a class="govuk-tabs__tab" href="#invalid"> Invalid</a>
                    </li>
                </ul>
                <div class="govuk-tabs__panel" id="awaiting-review">
                    <table class="govuk-table">
                        <thead class="govuk-table__head">
                            <tr class="govuk-table__row">
                                <th scope="col" class="govuk-table__header">Interested party</th>
                                <th scope="col" class="govuk-table__header">Submitted</th>
                                <th scope="col" class="govuk-table__header">Action</th>
                            </tr>
                        </thead>
                        <tbody class="govuk-table__body">
                            <tr class="govuk-table__row">
                                <td class="govuk-table__cell">Eva Sharma</td>
                                <td class="govuk-table__cell">24 September 2024</td>
                                <td class="govuk-table__cell"><a href="./interested-party-comments/3812/review" class="govuk-link">Review<span class="govuk-visually-hidden"> interested party comments from Eva Sharma</span></a>
                                </td>
                            </tr>
                            <tr class="govuk-table__row">
                                <td class="govuk-table__cell">Roger Simmons</td>
                                <td class="govuk-table__cell">24 September 2024</td>
                                <td class="govuk-table__cell"><a href="./interested-party-comments/3811/review" class="govuk-link">Review<span class="govuk-visually-hidden"> interested party comments from Roger Simmons</span></a>
                                </td>
                            </tr>
                            <tr class="govuk-table__row">
                                <td class="govuk-table__cell">Roger Simmons</td>
                                <td class="govuk-table__cell">24 September 2024</td>
                                <td class="govuk-table__cell"><a href="./interested-party-comments/3810/review" class="govuk-link">Review<span class="govuk-visually-hidden"> interested party comments from Roger Simmons</span></a>
                                </td>
                            </tr>
                        </tbody>
                    </table>
                </div>
                <div class="govuk-tabs__panel govuk-tabs__panel--hidden" id="valid">
                    <table class="govuk-table">
                        <thead class="govuk-table__head">
                            <tr class="govuk-table__row">
                                <th scope="col" class="govuk-table__header">Interested party</th>
                                <th scope="col" class="govuk-table__header">Submitted</th>
                                <th scope="col" class="govuk-table__header">Action</th>
                            </tr>
                        </thead>
                        <tbody class="govuk-table__body">
                            <tr class="govuk-table__row">
                                <td class="govuk-table__cell">Roger Simmons</td>
                                <td class="govuk-table__cell">24 September 2024</td>
                                <td class="govuk-table__cell"><a href="./interested-party-comments/3852/view" class="govuk-link">View<span class="govuk-visually-hidden"> interested party comments from Roger Simmons</span></a>
                                </td>
                            </tr>
                            <tr class="govuk-table__row">
                                <td class="govuk-table__cell">Roger Simmons</td>
                                <td class="govuk-table__cell">24 September 2024</td>
                                <td class="govuk-table__cell"><a href="./interested-party-comments/3851/view" class="govuk-link">View<span class="govuk-visually-hidden"> interested party comments from Roger Simmons</span></a>
                                </td>
                            </tr>
                            <tr class="govuk-table__row">
                                <td class="govuk-table__cell">Haley Eland</td>
                                <td class="govuk-table__cell">24 September 2024</td>
                                <td class="govuk-table__cell"><a href="./interested-party-comments/3850/view" class="govuk-link">View<span class="govuk-visually-hidden"> interested party comments from Haley Eland</span></a>
                                </td>
                            </tr>
                        </tbody>
                    </table>
                </div>
                <div class="govuk-tabs__panel govuk-tabs__panel--hidden" id="invalid">
                    <table class="govuk-table">
                        <thead class="govuk-table__head">
                            <tr class="govuk-table__row">
                                <th scope="col" class="govuk-table__header">Interested party</th>
                                <th scope="col" class="govuk-table__header">Submitted</th>
                                <th scope="col" class="govuk-table__header">Action</th>
                            </tr>
                        </thead>
                        <tbody class="govuk-table__body">
                            <tr class="govuk-table__row">
                                <td class="govuk-table__cell">Ryan Marshall</td>
                                <td class="govuk-table__cell">24 September 2024</td>
                                <td class="govuk-table__cell"><a href="./interested-party-comments/3872/view" class="govuk-link">View<span class="govuk-visually-hidden"> interested party comments from Ryan Marshall</span></a>
                                </td>
                            </tr>
                            <tr class="govuk-table__row">
                                <td class="govuk-table__cell">Ryan Marshall</td>
                                <td class="govuk-table__cell">24 September 2024</td>
                                <td class="govuk-table__cell"><a href="./interested-party-comments/3871/view" class="govuk-link">View<span class="govuk-visually-hidden"> interested party comments from Ryan Marshall</span></a>
                                </td>
                            </tr>
                            <tr class="govuk-table__row">
                                <td class="govuk-table__cell">Eva Sharma</td>
                                <td class="govuk-table__cell">24 September 2024</td>
                                <td class="govuk-table__cell"><a href="./interested-party-comments/3870/view" class="govuk-link">View<span class="govuk-visually-hidden"> interested party comments from Eva Sharma</span></a>
                                </td>
                            </tr>
                        </tbody>
                    </table>
                </div>
            </div>
            <p class="govuk-body"><a href="#" class="govuk-link">Withdrawn IP comments</a>
            </p>
        </div>
    </div>
</main>"
`;

exports[`interested-party-comments GET /interested-party-comments with data should render interestedPartyComments page with valid comments 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
            <h1             class="govuk-heading-l">Interested Party Comments</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <p class="govuk-body govuk-!-margin-bottom-6"><a href="/appeals-service/appeal-details/2/interested-party-comments/add"
                class="govuk-link">Add IP comment</a>
            </p>
            <div id="interested-party-comments-tabs" class="govuk-tabs pins-tabs"
            data-module="govuk-tabs">
                <h2 class="govuk-tabs__title"> Contents</h2>
                <ul class="govuk-tabs__list">
                    <li class="govuk-tabs__list-item govuk-tabs__list-item--selected"><a class="govuk-tabs__tab" href="#awaiting-review"> Awaiting review</a>
                    </li>
                    <li class="govuk-tabs__list-item"><a class="govuk-tabs__tab" href="#valid"> Valid</a>
                    </li>
                    <li class="govuk-tabs__list-item"><a class="govuk-tabs__tab" href="#invalid"> Invalid</a>
                    </li>
                </ul>
                <div class="govuk-tabs__panel" id="awaiting-review">
                    <table class="govuk-table">
                        <thead class="govuk-table__head">
                            <tr class="govuk-table__row">
                                <th scope="col" class="govuk-table__header">Interested party</th>
                                <th scope="col" class="govuk-table__header">Submitted</th>
                                <th scope="col" class="govuk-table__header">Action</th>
                            </tr>
                        </thead>
                        <tbody class="govuk-table__body">
                            <tr class="govuk-table__row">
                                <td class="govuk-table__cell">Eva Sharma</td>
                                <td class="govuk-table__cell">24 September 2024</td>
                                <td class="govuk-table__cell"><a href="./interested-party-comments/3812/review" class="govuk-link">Review<span class="govuk-visually-hidden"> interested party comments from Eva Sharma</span></a>
                                </td>
                            </tr>
                            <tr class="govuk-table__row">
                                <td class="govuk-table__cell">Roger Simmons</td>
                                <td class="govuk-table__cell">24 September 2024</td>
                                <td class="govuk-table__cell"><a href="./interested-party-comments/3811/review" class="govuk-link">Review<span class="govuk-visually-hidden"> interested party comments from Roger Simmons</span></a>
                                </td>
                            </tr>
                            <tr class="govuk-table__row">
                                <td class="govuk-table__cell">Roger Simmons</td>
                                <td class="govuk-table__cell">24 September 2024</td>
                                <td class="govuk-table__cell"><a href="./interested-party-comments/3810/review" class="govuk-link">Review<span class="govuk-visually-hidden"> interested party comments from Roger Simmons</span></a>
                                </td>
                            </tr>
                        </tbody>
                    </table>
                </div>
                <div class="govuk-tabs__panel govuk-tabs__panel--hidden" id="valid">
                    <table class="govuk-table">
                        <thead class="govuk-table__head">
                            <tr class="govuk-table__row">
                                <th scope="col" class="govuk-table__header">Interested party</th>
                                <th scope="col" class="govuk-table__header">Submitted</th>
                                <th scope="col" class="govuk-table__header">Action</th>
                            </tr>
                        </thead>
                        <tbody class="govuk-table__body">
                            <tr class="govuk-table__row">
                                <td class="govuk-table__cell">Roger Simmons</td>
                                <td class="govuk-table__cell">24 September 2024</td>
                                <td class="govuk-table__cell"><a href="./interested-party-comments/3852/view" class="govuk-link">View<span class="govuk-visually-hidden"> interested party comments from Roger Simmons</span></a>
                                </td>
                            </tr>
                            <tr class="govuk-table__row">
                                <td class="govuk-table__cell">Roger Simmons</td>
                                <td class="govuk-table__cell">24 September 2024</td>
                                <td class="govuk-table__cell"><a href="./interested-party-comments/3851/view" class="govuk-link">View<span class="govuk-visually-hidden"> interested party comments from Roger Simmons</span></a>
                                </td>
                            </tr>
                            <tr class="govuk-table__row">
                                <td class="govuk-table__cell">Haley Eland</td>
                                <td class="govuk-table__cell">24 September 2024</td>
                                <td class="govuk-table__cell"><a href="./interested-party-comments/3850/view" class="govuk-link">View<span class="govuk-visually-hidden"> interested party comments from Haley Eland</span></a>
                                </td>
                            </tr>
                        </tbody>
                    </table>
                </div>
                <div class="govuk-tabs__panel govuk-tabs__panel--hidden" id="invalid">
                    <table class="govuk-table">
                        <thead class="govuk-table__head">
                            <tr class="govuk-table__row">
                                <th scope="col" class="govuk-table__header">Interested party</th>
                                <th scope="col" class="govuk-table__header">Submitted</th>
                                <th scope="col" class="govuk-table__header">Action</th>
                            </tr>
                        </thead>
                        <tbody class="govuk-table__body">
                            <tr class="govuk-table__row">
                                <td class="govuk-table__cell">Ryan Marshall</td>
                                <td class="govuk-table__cell">24 September 2024</td>
                                <td class="govuk-table__cell"><a href="./interested-party-comments/3872/view" class="govuk-link">View<span class="govuk-visually-hidden"> interested party comments from Ryan Marshall</span></a>
                                </td>
                            </tr>
                            <tr class="govuk-table__row">
                                <td class="govuk-table__cell">Ryan Marshall</td>
                                <td class="govuk-table__cell">24 September 2024</td>
                                <td class="govuk-table__cell"><a href="./interested-party-comments/3871/view" class="govuk-link">View<span class="govuk-visually-hidden"> interested party comments from Ryan Marshall</span></a>
                                </td>
                            </tr>
                            <tr class="govuk-table__row">
                                <td class="govuk-table__cell">Eva Sharma</td>
                                <td class="govuk-table__cell">24 September 2024</td>
                                <td class="govuk-table__cell"><a href="./interested-party-comments/3870/view" class="govuk-link">View<span class="govuk-visually-hidden"> interested party comments from Eva Sharma</span></a>
                                </td>
                            </tr>
                        </tbody>
                    </table>
                </div>
            </div>
            <p class="govuk-body"><a href="#" class="govuk-link">Withdrawn IP comments</a>
            </p>
        </div>
    </div>
</main>"
`;

exports[`interested-party-comments GET /review-comment with data should render review comment page with the provided comment details 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">Review comment</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <dl class="govuk-summary-list">
                    <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> Interested party</dt>
                        <dd class="govuk-summary-list__value">Lee Thornton</dd>
                    </div>
                    <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> Email</dt>
                        <dd class="govuk-summary-list__value">test1@example.com</dd>
                    </div>
                    <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Address</dt>
                        <dd class="govuk-summary-list__value">Not provided</dd>
                        <dd class="govuk-summary-list__actions"><a class="govuk-link" href="#"> Add<span class="govuk-visually-hidden"> address</span></a>
                        </dd>
                    </div>
                    <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> Submitted</dt>
                        <dd class="govuk-summary-list__value">9 October 2024</dd>
                    </div>
                    <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Comment</dt>
                        <dd class="govuk-summary-list__value">Awaiting review comment 47</dd>
                        <dd class="govuk-summary-list__actions"><a class="govuk-link" href="#"> Redact</a>
                        </dd>
                    </div>
                    <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Supporting documents</dt>
                        <dd class="govuk-summary-list__value">Not provided</dd>
                        <dd class="govuk-summary-list__actions"><a class="govuk-link" href="#"> Add<span class="govuk-visually-hidden"> supporting documents</span></a>
                        </dd>
                    </div>
                </dl>
                <div class="govuk-form-group">
                    <div class="govuk-checkboxes" data-module="govuk-checkboxes">
                        <div class="govuk-checkboxes__item">
                            <input class="govuk-checkboxes__input" id="site-visit-request" name="site-visit-request"
                            type="checkbox" value="site-visit">
                            <label class="govuk-label govuk-checkboxes__label" for="site-visit-request">The comment includes a site visit request</label>
                        </div>
                    </div>
                </div>
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset">
                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Do you accept the comment?</legend>
                        <div class="govuk-radios" data-module="govuk-radios">
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="status" name="status" type="radio"
                                value="valid">
                                <label class="govuk-label govuk-radios__label" for="status">Comment valid</label>
                            </div>
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="status-2" name="status" type="radio"
                                value="invalid">
                                <label class="govuk-label govuk-radios__label" for="status-2">Comment invalid</label>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <div class="govuk-!-margin-bottom-3"><a class="govuk-link" href="#">Withdraw comment</a>
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Confirm</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`interested-party-comments GET /view-comment with data should render view comment page with the provided comment details 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
            <h1             class="govuk-heading-l">View comment</h1>
        </div>
    </div>
    <dl class="govuk-summary-list">
        <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> Interested party</dt>
            <dd class="govuk-summary-list__value">Lee Thornton</dd>
        </div>
        <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> Email</dt>
            <dd class="govuk-summary-list__value">test1@example.com</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Address</dt>
            <dd class="govuk-summary-list__value">Not provided</dd>
            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="#"> Add<span class="govuk-visually-hidden"> address</span></a>
            </dd>
        </div>
        <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> Site visit requested</dt>
            <dd class="govuk-summary-list__value">No</dd>
        </div>
        <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> Submitted</dt>
            <dd class="govuk-summary-list__value">9 October 2024</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Comment</dt>
            <dd class="govuk-summary-list__value">Awaiting review comment 47</dd>
            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="#"> Redact</a>
            </dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Supporting documents</dt>
            <dd class="govuk-summary-list__value">Not provided</dd>
            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="#"> Add<span class="govuk-visually-hidden"> supporting documents</span></a>
            </dd>
        </div>
    </dl>
    <div class="govuk-!-margin-bottom-3"><a class="govuk-link" href="#">Withdraw comment</a>
    </div>
</main>"
`;
